couple of fixes on mobile

--- a/scss/scss.scss
+++ b/scss/scss.scss
@@ -132,6 +132,9 @@ input {
   border-radius: 6px;
   width: 27%;
 }
+#sum {
+  min-width: 350px;
+}
 .lower {
   @extend input;
   width: 100%;
@@ -141,6 +144,12 @@ input {
 @media (max-width: 460px) {
   .lower {
     max-width: 150px;
+  }
+  .lower.second {
+    margin-left: -10px;
+  }
+  #sum {
+    min-width: 300px;
   }
 }
 .container-2 {
@@ -183,6 +192,28 @@ box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.24);
   padding-left: 60px;
   padding-top: 10px;
 }
+.header-text2 {
+  padding-left: 75px;
+  padding-top: 10px;
+}
+.header-text3 {
+  padding-left: 50px;
+  padding-top: 10px;
+}
+@media (max-width: 460px) {
+  .head1 {
+    font-size: 20px;
+  }
+  .header-text {
+    padding-left: 30px;
+  }
+  .header-text2 {
+    padding-left: 40px;
+  }
+  .header-text3 {
+    padding-left: 30px;
+  }
+}
 .cardText {
   padding: 10px;
   padding-left: 20px;
@@ -212,6 +243,11 @@ box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.24);
   color: #0b0146;
   font-size: 25px;
   text-align: center;
+}
+@media screen and (max-width: 460px) {
+.smallerMobile {
+  font-size: 22px;
+}
 }
 .price {
   padding: 30px 0;
@@ -454,6 +490,7 @@ a {
     transform: scale(1.2);
     color: #0a0236;
     text-shadow: none;
+    font-size: 12px;
   }
   .current {
     .name {
@@ -719,7 +756,6 @@ transition: 0.5s linear;
    display: flex;
    justify-content: center;
    font-size: 18px;
-   z-index: 99999999999;
 }
 #slideout_inner {
   padding-left: 10px;
@@ -735,12 +771,11 @@ transition: 0.5s linear;
   justify-content: center;
   align-items: center;
   border-right: 1px solid #fff;
-  z-index: 99999999999;
 }
-#slideout:hover, #slideout:focus {
+#slideout:hover, #slideout:focus, #slideout:active {
   left: 261px;
 }
-#slideout:hover #slideout_inner {
+#slideout:hover #slideout_inner, #slideout:focus #slideout_inner, #slideout:active #slideout_inner {
   left: 0;
 }
 .icon-phone {
@@ -775,8 +810,11 @@ transition: 0.5s linear;
     height: 120px;
     left: -211px;
   }
-  #slideout:hover, #slideout:focus {
+  #slideout:hover, #slideout:focus, #slideout:active {
     left: 211px;
+  }
+  #slideout:hover #slideout_inner, #slideout:focus #slideout_inner, #slideout:active #slideout_inner {
+    left: 0;
   }
   .icon-phone {
     font-size: 14px;
